# qt-todottxt-tray

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  listwidget.cpp  listwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  todo-tray.cbp  todoitem.cpp  todoitem.h  todoitemwidget.cpp  todoitemwidget.h  todolist.cpp  todolist.h  trayapp.cpp  trayapp.h
